[tool.poetry]
name = "austin"
version = "0.1.0"
description = ""
authors = ["Austin Davis <austindavis@gmail.com>", "Neel Nanda <neelnanda27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
